@@ -3,6 +3,8 @@
 - script replay: Fix endless loop on end of script file.
 - Fix /umockdev-run/integration/input-evtest for 32 bit architectures. Add a
   script recorded on 32 bit and select the right one in the test.
+- Fix race condition in /umockdev-record/script-log-simple test which sometimes
+  caused this to fail on slow machines.
 
 0.3.1 (2013-07-18)
 ------------------
